[package]
name = "hydra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = "0.57.1"
aws-sdk-dynamodb = "0.35.0"
aws-sdk-kinesis = "0.35.0"
futures = "0.3.29"
rusoto_core = "0.48.0"
rusoto_dynamodb = "0.48.0"
rusoto_kinesis = "0.48.0"
serde = "1.0.190"
tokio = { version = "1", features = ["full"] }

